<resources>
    <string name="app_name">PkGoCalc</string>
    <string name="pokemon">Pokemon:</string>
    <string name="new_cp">New CP:</string>
    <string name="trainer_level">Trainer Level:</string>
    <string name="new_hp">New HP:</string>
    <string name="current_cp">Current CP:</string>
    <string name="stardust_cost">Stardust Cost:</string>
    <string name="current_hp">Current HP:</string>
    <string name="submit">Submit</string>
    <string name="powered_up_q">Powered up?</string>
    <string name="power_up">Power Up</string>
    <string name="check_if_unknown">(check if unknown)</string>
    <string name="possible_iv_values">Possible IV Values:</string>
    <string name="level">Level</string>
    <string name="stamina">Stamina</string>
    <string name="attack">Attack</string>
    <string name="defence">Defence</string>
    <string name="do_one_of_the_following_to_narrow_down_ivs">Do one of the following to narrow down IVs</string>
    <string name="evolve">Evolve</string>
    <string name="max_level">Max Level</string>
    <string name="stats_after_evolution">Stats After Evolution</string>
    <string name="cp">CP</string>
    <string name="hp">HP</string>
    <string name="min">Min</string>
    <string name="average">Average</string>
    <string name="max">Max</string>
    <string name="stats_after_power_up">Stats After Power Up</string>
    <string name="perfect_values">Perfect Values:</string>
    <string name="perc_perfect">% Perfect</string>
    <string name="save">Save</string>

    <string-array name='pokemonNames'>
        <item>Bulbasaur</item>
        <item>Ivysaur</item>
        <item>Venusaur</item>
        <item>Charmander</item>
        <item>Charmeleon</item>
        <item>Charizard</item>
        <item>Squirtle</item>
        <item>Wartortle</item>
        <item>Blastoise</item>
        <item>Caterpie</item>
        <item>Metapod</item>
        <item>Butterfree</item>
        <item>Weedle</item>
        <item>Kakuna</item>
        <item>Beedrill</item>
        <item>Pidgey</item>
        <item>Pidgeotto</item>
        <item>Pidgeot</item>
        <item>Rattata</item>
        <item>Raticate</item>
        <item>Spearow</item>
        <item>Fearow</item>
        <item>Ekans</item>
        <item>Arbok</item>
        <item>Pikachu</item>
        <item>Raichu</item>
        <item>Sandshrew</item>
        <item>Sandslash</item>
        <item>Nidoran F</item>
        <item>Nidorina</item>
        <item>Nidoqueen</item>
        <item>Nidoran M</item>
        <item>Nidorino</item>
        <item>Nidoking</item>
        <item>Clefairy</item>
        <item>Clefable</item>
        <item>Vulpix</item>
        <item>Ninetales</item>
        <item>Jigglypuff</item>
        <item>Wigglytuff</item>
        <item>Zubat</item>
        <item>Golbat</item>
        <item>Oddish</item>
        <item>Gloom</item>
        <item>Vileplume</item>
        <item>Paras</item>
        <item>Parasect</item>
        <item>Venonat</item>
        <item>Venomoth</item>
        <item>Diglett</item>
        <item>Dugtrio</item>
        <item>Meowth</item>
        <item>Persian</item>
        <item>Psyduck</item>
        <item>Golduck</item>
        <item>Mankey</item>
        <item>Primeape</item>
        <item>Growlithe</item>
        <item>Arcanine</item>
        <item>Poliwag</item>
        <item>Poliwhirl</item>
        <item>Poliwrath</item>
        <item>Abra</item>
        <item>Kadabra</item>
        <item>Alakazam</item>
        <item>Machop</item>
        <item>Machoke</item>
        <item>Machamp</item>
        <item>Bellsprout</item>
        <item>Weepinbell</item>
        <item>Victreebel</item>
        <item>Tentacool</item>
        <item>Tentacruel</item>
        <item>Geodude</item>
        <item>Graveler</item>
        <item>Golem</item>
        <item>Ponyta</item>
        <item>Rapidash</item>
        <item>Slowpoke</item>
        <item>Slowbro</item>
        <item>Magnemite</item>
        <item>Magneton</item>
        <item>Farfetchd</item>
        <item>Doduo</item>
        <item>Dodrio</item>
        <item>Seel</item>
        <item>Dewgong</item>
        <item>Grimer</item>
        <item>Muk</item>
        <item>Shellder</item>
        <item>Cloyster</item>
        <item>Gastly</item>
        <item>Haunter</item>
        <item>Gengar</item>
        <item>Onix</item>
        <item>Drowzee</item>
        <item>Hypno</item>
        <item>Krabby</item>
        <item>Kingler</item>
        <item>Voltorb</item>
        <item>Electrode</item>
        <item>Exeggcute</item>
        <item>Exeggutor</item>
        <item>Cubone</item>
        <item>Marowak</item>
        <item>Hitmonlee</item>
        <item>Hitmonchan</item>
        <item>Lickitung</item>
        <item>Koffing</item>
        <item>Weezing</item>
        <item>Rhyhorn</item>
        <item>Rhydon</item>
        <item>Chansey</item>
        <item>Tangela</item>
        <item>Kangaskhan</item>
        <item>Horsea</item>
        <item>Seadra</item>
        <item>Goldeen</item>
        <item>Seaking</item>
        <item>Staryu</item>
        <item>Starmie</item>
        <item>Mr. Mime</item>
        <item>Scyther</item>
        <item>Jynx</item>
        <item>Electabuzz</item>
        <item>Magmar</item>
        <item>Pinsir</item>
        <item>Tauros</item>
        <item>Magikarp</item>
        <item>Gyarados</item>
        <item>Lapras</item>
        <item>Ditto</item>
        <item>Eevee -> Vaporeon</item>
        <item>Eevee -> Jolteon</item>
        <item>Eevee -> Flareon</item>
        <item>Vaporeon</item>
        <item>Jolteon</item>
        <item>Flareon</item>
        <item>Porygon</item>
        <item>Omanyte</item>
        <item>Omastar</item>
        <item>Kabuto</item>
        <item>Kabutops</item>
        <item>Aerodactyl</item>
        <item>Snorlax</item>
        <item>Articuno</item>
        <item>Zapdos</item>
        <item>Moltres</item>
        <item>Dratini</item>
        <item>Dragonair</item>
        <item>Dragonite</item>
        <item>Mewtwo</item>
        <item>Mew</item>
    </string-array>

    <string-array name='stardust'>
        <item>Unknown</item>
        <item>200</item>
        <item>400</item>
        <item>600</item>
        <item>800</item>
        <item>1000</item>
        <item>1300</item>
        <item>1600</item>
        <item>1900</item>
        <item>2200</item>
        <item>2500</item>
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>10000</item>
    </string-array>
</resources>
